feat(core-bookmark-presentation): cache bookmark metadata
